--- a/src/index.css
+++ b/src/index.css
@@ -152,6 +152,13 @@ p {
   .section-center {
     width: 95vw;
   }
+  
+}
+@media screen and (max-width: 476px) {
+  .grocery{
+    width: 80%;
+    max-width: 80%;
+  }
 }
 main {
   min-height: 100vh;
@@ -198,7 +205,6 @@ Grocery List
   text-align: center;
 }
 .form-control {
-  width: 100%;
   display: flex;
   justify-content: center;
 }
